ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
    - host: blog-architecture.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client-clusterip
                port:
                  name: intent-port
